--- a/ARTICLE2/sample.bib
+++ b/ARTICLE2/sample.bib
@@ -1,5 +1,28 @@
 
+@INPROCEEDINGS{Horsch,
+  author={Hörsch, Jonas and Brown, Tom},
+  booktitle={2017 14th International Conference on the European Energy Market (EEM)}, 
+  title={The role of spatial scale in joint optimisations of generation and transmission for European highly renewable scenarios}, 
+  year={2017},
+  volume={},
+  number={},
+  pages={1-7},
+  keywords={Optimization;Generators;Europe;Investment;Wind;Spatial resolution},
+  doi={10.1109/EEM.2017.7982024}}
 
+@article{BIENER2020106349,
+title = {Grid reduction for energy system analysis},
+journal = {Electric Power Systems Research},
+volume = {185},
+pages = {106349},
+year = {2020},
+issn = {0378-7796},
+doi = {https://doi.org/10.1016/j.epsr.2020.106349},
+url = {https://www.sciencedirect.com/science/article/pii/S0378779620301553},
+author = {Wolfgang Biener and Klaus René {Garcia Rosas}},
+keywords = {Grid reduction, Equivalencing, Energy system analysis, Energy system modeling},
+abstract = {Energy system models play an important role in evaluating potential pathways to a low-carbon energy system. Modeling the electrical grids within an energy system model raises the computational burden significantly. This is the reason why the grid is often reduced to a lower amount of nodes. While grid reduction is common in energy system models, the partitioning of the grid is mostly done manually. A grid reduction method is proposed that takes electrical parameters of the grid as well as other parameters, such as political borders or region-specific renewable potentials, into account. The proposed reduction method uses clustering based on electrical distance to identify regions with high electrical connectivity to minimize load flow deviations after the reduction. The method is compared against another state-of-the-art partitioning-based reduction method. The comparison shows that the partitioning plays an important role on the accuracy of line power flows when reducing grids for energy system analysis. An additional investigation is carried out on the ratio of recognized overloaded lines in the reduced grids. With respect to studied parameters, the proposed reduction method prevails. The findings can thus be used to more accurately reduce and represent electrical grids in energy system models.}
+}
 
 @article{European_H2_Market_landscape,
 title = {European Hydrogen Market Landscape - November 2023 Report},
@@ -51,49 +74,100 @@ abstract = {}
       url={https://arxiv.org/abs/2403.02559}, 
 }
 
+
+
 @article{INTRO_isolated_MIP,
-  author = {Hugo Morais, Pedro Faria, Peter Kadar, Zita Vale, H.M. Khodr},
-  journal = {Renewable Energy},
-  number = {},
-  title = {Optimal scheduling of a renewable micro-grid in an isolated load area using mixed-integer linear programming},
-  volume = {},
-  year = {2010}
+title = {Optimal scheduling of a renewable micro-grid in an isolated load area using mixed-integer linear programming},
+journal = {Renewable Energy},
+volume = {35},
+number = {1},
+pages = {151-156},
+year = {2010},
+issn = {0960-1481},
+doi = {https://doi.org/10.1016/j.renene.2009.02.031},
+url = {https://www.sciencedirect.com/science/article/pii/S0960148109001001},
+author = {Hugo Morais and Péter Kádár and Pedro Faria and Zita A. Vale and H.M. Khodr},
+keywords = {Mixed-integer linear programming, Renewable energy park, Scheduling, Virtual power producer},
+abstract = {In the energy management of the isolated operation of small power system, the economic scheduling of the generation units is a crucial problem. Applying right timing can maximize the performance of the supply. The optimal operation of a wind turbine, a solar unit, a fuel cell and a storage battery is searched by a mixed-integer linear programming implemented in General Algebraic Modeling Systems (GAMS). A Virtual Power Producer (VPP) can optimal operate the generation units, assured the good functioning of equipment, including the maintenance, operation cost and the generation measurement and control. A central control at system allows a VPP to manage the optimal generation and their load control. The application of methodology to a real case study in Budapest Tech, demonstrates the effectiveness of this method to solve the optimal isolated dispatch of the DC micro-grid renewable energy park. The problem has been converged in 0.09s and 30 iterations.}
 }
 
 @article{INTRO_Glomb,
-  author = {Lukas Glomb, Frauke Liers, Florian Roesel},
-  journal = {},
-  number = {},
-  title = {A rolling-horizon approach for multi-period optimization},
-  volume = {},
-  year = {}
+title = {A rolling-horizon approach for multi-period optimization},
+journal = {European Journal of Operational Research},
+volume = {300},
+number = {1},
+pages = {189-206},
+year = {2022},
+issn = {0377-2217},
+doi = {https://doi.org/10.1016/j.ejor.2021.07.043},
+url = {https://www.sciencedirect.com/science/article/pii/S0377221721006536},
+author = {Lukas Glomb and Frauke Liers and Florian Rösel},
+keywords = {Large scale optimization, Time decomposition, Rolling horizon, Lot sizing, Tail assignment},
+abstract = {Mathematical optimization problems including a time dimension abound. For example, logistics, process optimization and production planning tasks must often be optimized for a range of time periods. Usually, these problems incorporating time structure are very large and cannot be solved to global optimality by modern solvers within a reasonable period of time. Therefore, the so-called rolling-horizon approach is often adopted. This approach aims to solve the problem periodically, including additional information from proximately following periods. In this paper, we first investigate several drawbacks of this approach and develop an algorithm that compensates for these drawbacks both theoretically and practically. As a result, the rolling-horizon decomposition methodology is adjusted to enable large scale optimization problems to be solved efficiently. In addition, we introduce conditions that guarantee the quality of the solutions. We further demonstrate the applicability of the method to a variety of challenging optimization problems. We substantiate the findings with computational studies on the lot-sizing problem in production planning, as well as for large-scale real-world instances of the tail-assignment problem in aircraft management. It proves possible to solve large-scale realistic tail-assignment instances efficiently, leading to solutions that are at most a few percent away from a globally optimal solution.}
 }
+
 
 @article{INTRO_Palma-Behnke,
-  author = {Rodrigo Palma-Behnke, Carlos Benavides, Fernando Lanas, Bernardo Severino, Lorenzo Reyes, Jaqueline Llanos, Doris Saez},
-  journal = {IEEE transactions on smart grid},
-  number = {},
-  title = {A microgrid energy management system based on the rolling horizon Strategy},
-  volume = {},
-  year = {2013}
-}
+  author={Palma-Behnke, Rodrigo and Benavides, Carlos and Lanas, Fernando and Severino, Bernardo and Reyes, Lorenzo and Llanos, Jacqueline and Sáez, Doris},
+  journal={IEEE Transactions on Smart Grid}, 
+  title={A Microgrid Energy Management System Based on the Rolling Horizon Strategy}, 
+  year={2013},
+  volume={4},
+  number={2},
+  pages={996-1006},
+  keywords={Microgrids;Energy management;Generators;Batteries;Predictive models;Load modeling;Inverters;Demand-side management;energy management system;microgrid;photovoltaic;rolling horizon;wind turbine},
+  doi={10.1109/TSG.2012.2231440}}
+
 
 @article{INTRO_karlsruhe,
-  author = {Hasan U. Yilmaz, Kai Mainzer, Dogan Keles},
-  journal = {},
-  number = {},
-  title = {Improving the performance of solving large scale mixed-integer energy system models by applying the fix-and-relax method},
-  volume = {},
-  year = {}
+  author={Hasan U. Yilmaz, Kai Mainzer, Dogan Keles},
+  booktitle={2020 17th International Conference on the European Energy Market (EEM)}, 
+  title={Improving the performance of solving large scale mixed-integer energy system models by applying the fix-and-relax method}, 
+  year={2020},
+  pages={1-5},
+  keywords={Costs;Europe;Optimization;System analysis and design;Periodic structures},
+  doi={10.1109/EEM49802.2020.9221934}}
+
+@article{INTRO_blanco,
+title = {A review at the role of storage in energy systems with a focus on Power to Gas and long-term storage},
+journal = {Renewable and Sustainable Energy Reviews},
+volume = {81},
+pages = {1049-1086},
+year = {2018},
+issn = {1364-0321},
+doi = {https://doi.org/10.1016/j.rser.2017.07.062},
+url = {https://www.sciencedirect.com/science/article/pii/S1364032117311310},
+author = {Herib Blanco and André Faaij},
+keywords = {Energy storage, Energy modeling, Flexibility, Power to Gas},
+abstract = {A review of more than 60 studies (plus m4ore than 65 studies on P2G) on power and energy models based on simulation and optimization was done. Based on these, for power systems with up to 95% renewables, the electricity storage size is found to be below 1.5% of the annual demand (in energy terms). While for 100% renewables energy systems (power, heat, mobility), it can remain below 6% of the annual energy demand. Combination of sectors and diverting the electricity to another sector can play a large role in reducing the storage size. From the potential alternatives to satisfy this demand, pumped hydro storage (PHS) global potential is not enough and new technologies with a higher energy density are needed. Hydrogen, with more than 250 times the energy density of PHS is a potential option to satisfy the storage need. However, changes needed in infrastructure to deal with high hydrogen content and the suitability of salt caverns for its storage can pose limitations for this technology. Power to Gas (P2G) arises as possible alternative overcoming both the facilities and the energy density issues. The global storage requirement would represent only 2% of the global annual natural gas production or 10% of the gas storage facilities (in energy equivalent). The more options considered to deal with intermittent sources, the lower the storage requirement will be. Therefore, future studies aiming to quantify storage needs should focus on the entire energy system including technology vectors (e.g. Power to Heat, Liquid, Gas, Chemicals) to avoid overestimating the amount of storage needed.}
 }
 
+@article{INTRO_parra,
+title = {A review on the role, cost and value of hydrogen energy systems for deep decarbonisation},
+journal = {Renewable and Sustainable Energy Reviews},
+volume = {101},
+pages = {279-294},
+year = {2019},
+issn = {1364-0321},
+doi = {https://doi.org/10.1016/j.rser.2018.11.010},
+url = {https://www.sciencedirect.com/science/article/pii/S1364032118307421},
+author = {David Parra and Luis Valverde and F. Javier Pino and Martin K. Patel},
+keywords = {Hydrogen, Renewable energy, Energy storage, Power-to-gas, Hydrogen refuelling, Smart grid},
+abstract = {Hydrogen technologies can play an important role in decarbonising our energy system in a variety of ways across the energy value chain. It is therefore critical to identify the strategic roles as well as the conditions under which hydrogen energy systems become attractive for the energy transition. In this paper, the authors present a techno-economic review of hydrogen energy systems including power-to-power, power-to-gas, hydrogen refuelling and stationary fuel cells. We focus on their optimal operation as flexible assets and we identify three actions that can foster their uptake beyond technological progress. First, we recommend optimal electricity supply with dedicated control strategies considering that electricity dominates the levelised cost of hydrogen production via electrolysis. Secondly, hydrogen can enable the further integration of traditionally independent sectors, namely electricity, heat and transport while contributing to decarbonise all. This position can also be advantageous for investors who sell heat and fuels as energy efficient products. Lastly, we examine a whole range of revenues from different products and applications which can be combined (i.e. benefit stacking) to match capital and operational expenditures. We discuss these roles in depth and we conclude that policy makers together with technology developers should elaborate smart strategies to reduce cost by scaling production, stimulate standardisation (e.g., similar to the PV industry) as well as develop new market structures and regulatory frameworks which allow hydrogen technologies to deliver multiple low carbon applications and products.}
+}
 @article{INTRO_short-term,
-  author = {Ilkka Keppo, MAnfred Strubegger},
-  journal = {Energy},
-  number = {},
-  title = {Short term decisions for long term problems - The effect of foreshight on model based energy system analysis},
-  volume = {},
-  year = {}
+title = {Short term decisions for long term problems – The effect of foresight on model based energy systems analysis},
+journal = {Energy},
+volume = {35},
+number = {5},
+pages = {2033-2042},
+year = {2010},
+issn = {0360-5442},
+doi = {https://doi.org/10.1016/j.energy.2010.01.019},
+url = {https://www.sciencedirect.com/science/article/pii/S0360544210000216},
+author = {Ilkka Keppo, Manfred Strubegger},
+keywords = {Energy modeling, Optimization model, Decision horizon, Myopic, Foresight},
+abstract = {This paper presents the development and demonstration of a limited foresight energy system model. The presented model is implemented as an extension to a large, linear optimization model, MESSAGE. The motivation behind changing the model is to provide an alternative decision framework, where information for the full time frame is not available immediately and sequential decision making under incomplete information is implied. While the traditional optimization framework provides the globally optimal decisions for the modeled problem, the framework presented here may offer a better description of the decision environment, under which decision makers must operate. We further modify the model to accommodate flexible dynamic constraints, which give an option to implement investments faster, albeit with a higher cost. Finally, the operation of the model is demonstrated using a moving window of foresight, with which decisions are taken for the next 30 years, but can be reconsidered later, when more information becomes available. We find that the results demonstrate some of the pitfalls of short term planning, e.g. lagging investments during earlier periods lead to higher requirements later during the century. Furthermore, the energy system remains more reliant on fossil based energy carriers, leading to higher greenhouse gas emissions.}
 }
 
 @article{HORSCH2018207,
@@ -196,7 +270,7 @@ keywords = {Wind power, Prediction interval, Long short-term memory neural netwo
 abstract = {Prediction interval of wind power (PIWP) is crucial to assessing the economic and safe operation of the wind turbine and providing support for analysis of the stability of power systems. The hybrid model (Beta-PSO-LSTM) of long short-term memory (LSTM) neural network and Beta distribution function based particle swarm optimization (PSO) is put forward for prediction interval of wind power. In order to enhance the performance of the Beta-PSO-LSTM for PIWP in training process, wind power series are divided into different power intervals, and then the Beta-PSO-LSTM is used to estimate each power interval of the original wind power series. Furthermore, based on the analysis of the interval forecasting error information in wind power training data set, Beta distribution model is proposed to get better PIWP, and PSO is used to optimize the parameters of the model. Finally, the proposed Beta-PSO-LSTM model is compared with the Beta distribution optimized by PSO based the BP neural network (Beta-PSO-BP), the normal distribution based LSTM neural network (Norm-LSTM), Beta distribution based LSTM neural network (Beta-LSTM), and Beta distribution optimized by iterative method based LSTM neural network (Beta-IM-LSTM) for PIWP. The simulation results show that the PIWP obtained by the Beta-PSO-LSTM model has higher reliability and narrower interval bandwidth, which can provide decision support for the safe and stable operation of power systems.}
 }
 
-@ARTICLE{GaussCopula,
+@ARTICLE{INTRO_GaussCopula,
 
   author={Papaefthymiou, George and Kurowicka, Dorota},
 
