--- a/ARTICLE2/sample.bib
+++ b/ARTICLE2/sample.bib
@@ -290,6 +290,12 @@ abstract = {Prediction interval of wind power (PIWP) is crucial to assessing the
 
   doi={10.1109/TPWRS.2008.2004728}}
 
+@misc{INTRO_gurobi,
+  author = {{Gurobi Optimization, LLC}},
+  title = {{Gurobi Optimizer Reference Manual}},
+  year = 2024,
+  url = "https://www.gurobi.com"
+}
 @article{weibullwind,
 title = {Evaluation of wind power production prospective and Weibull parameter estimation methods for Babaurband, Sindh Pakistan},
 journal = {Energy Conversion and Management},
