--- a/ARTICLE2/template.tex
+++ b/ARTICLE2/template.tex
@@ -307,7 +307,7 @@ We present our attempt at dealing with the great computational requirement by bu
 
 Further, RH is then used for the validation of the results for the CEP obtained in the perfect foresight optimization,
  to ensure that given a solution to the CEP, the ED problem admits feasible solutions even in a limited-foresight environment. 
-The idea is to solve the CEP as to build a grid that can be operated as a "smart grid", through a control system that
+The idea is to solve the CEP as to build a grid that can be operated as a ``smart grid'', through a control system that
  optimizes on day ahead forecasts.
 {
 \color{gray}
@@ -364,6 +364,10 @@ The model takes in input the generation and load scenarios of the given area alo
 The CEP and the ED problems for all scenarios are solved concurrently. 
 When optimizing over multiple scenarios jointly, the solver returns the minimal amount of infrastructure and capacities that is needed to have feasibility (that is, demand met at all time and no blackouts) over all scenarios in input, with minimal cost. 
 Cost is considered to be the sum of capital costs and average operational costs of the infrastructure over the scenarios.
+
+For the rest of this article, when talking about a solution to the LP problem, we refer to a realization of variables solving the CEP and ED problem jointly. 
+When mentioning a solution to the CEP problem, we refer to those components of the corresponding LP problem solution that are not time or scenario dependent. 
+When talking about a solution to the ED problem only, we refer to a realization of the time and scenario dependent variables that solve problem for a given \textit{fixed} CEP solution.
 
 The optimization problem is solved using the Gurobi solver \textcolor{green}{\cite{INTRO_gurobi}}.
 
@@ -425,7 +429,7 @@ See Table \ref{table_vars} for the summary of all decision variables.
 There are numerous parameters that describe the grid and are passed to the model. 
 The main ones are related to capital costs of the infrastructure to be built and the following values are assumed for panels and turbines: $cs = 400$\euro, $cw = 3 000 000$\euro. 
 We also set capital costs for fuel cells and electrolyzers: since hydrogen infrastructure is usually obtained by reconverting existing infrastructure from other purposes, the estimation of investment costs is very location dependent and beyond the scope of this work \textcolor{green}{[?]}. 
-Thus for our purposes, instead of representing the actual investment for the facilities, a minimal "symbolic" cost is assigned per unit of capacity, so that in minimizing the model estimates needed conversion capacities $mhte_n$ and $meth_n$.
+Thus for our purposes, instead of representing the actual investment for the facilities, a minimal ``symbolic'' cost is assigned per unit of capacity, so that in minimizing the model estimates needed conversion capacities $mhte_n$ and $meth_n$.
 
 The storage of the hydrogen has a cost that depends on various factors: capital cost of the technology used for storage, operating costs, length of time that the hydrogen is kept in storage.
 For our model we only set the parameters $ch$, to be multiplied by the maximum storage needed ($nh$), representing capital cost of storage infrastructure. 
@@ -505,8 +509,8 @@ Let $d$ be the number of scenarios, and $T$ the number of time steps. The object
 \begin{align*}
     \min \quad 
     &&\sum_{k\in\cN}&(\text{cs}_k \cdot \text{ns}_k+\hspace{-1em}&&\text{cw}_k \cdot \text{nw}_k + \text{ch}_k \cdot \text{nh}_k )\ + \\
-    &+& \sum_{k\in\cN}&(\text{cmhte}_k\cdot\text{m} \hspace{-2em}&& \text{hte}_k + \text{cmeth}_k\cdot \text{meth}_k) \ + \\
-    &+& \sum_{l\in\cE_P}& (\text{cNTC}_l\cdot \text{ad}\hspace{-2em}&&\text{dNTC}_l) 
+    &+& \sum_{k\in\cN}&(\text{cmhte}_k\cdot\text{m} \hspace{-1em}&& \text{hte}_k + \text{cmeth}_k\cdot \text{meth}_k) \ + \\
+    &+& \sum_{l\in\cE_P}& (\text{cNTC}_l\cdot \text{ad}\hspace{-1em}&&\text{dNTC}_l) 
     + \sum_{l\in\cE_H} (\text{cMH}_l\cdot \text{addMH}_l) \ + \stepcounter{equation}\tag{\theequation}\label{objVal} \\   
     &+&\frac{1}{d}\sum_{j=1}^{d}&\sum_{t=1}^{T} \Bigg(\sum_{k\in\cN} \hspace{-5em}&&
     (\text{ch\_t}_k \cdot \text{H}_{j,t,k} + \text{chte}_k \cdot \text{HtE}_{j,t,k} + \text{ceth}_k \cdot \text{EtH}_{j,t,k})\ + \\
@@ -585,7 +589,7 @@ Finally, edge capacities on the respective graphs are considered for all scenari
 
 \subsection{Validation: Rolling Horizon}\label{subsection: RH}
 
-While computing the optimal solution on a batch of scenarios by solving the LP model described in section \ref{section: LP}, the solver ``knows the future'' for those scenarios. 
+While computing the optimal solution on a batch of scenarios by solving the LP model described in section \ref{subsection: LP}, the solver ``knows the future'' for those scenarios. 
 That is, the criteria it uses to determine, at each time step, how much electricity or hydrogen should be converted or transmitted, and where, is a mathematical minimum that is informed by the knowledge of what is needed at any time during the one year scenario.
 In real life, accurate forecasts for weather, and consequently for power generation, are known on a day ahead basis, at most two days ahead. 
 We are thus interested in evaluating whether an optimal grid as given by the solution of the CEP problem on a batch of train scenarios can (1) be operated without knowledge of the future in order to satisfy demand on the same scenarios it was trained on, and (2) generalize to new test scenarios.
@@ -600,7 +604,7 @@ In order to operate a multi-node grid, we propose to use the Rolling Horizon opt
 The basic idea is to divide the time horizon into smaller periods and to progressively optimize on each period, passing the variables of the solved periods as fixed to the next. 
 In our case, we are interested in periods of length one day each, representing the knowledge of future that is given to the grid administrator by weather forecasts.
 
-Recall that when optimizing with the LP model described in section \ref{section: LP}, the solutions to the CEP and to the ED problem for all train scenarios $j\in J_{train}$ are given concurrently. 
+Recall that when optimizing with the LP model described in section \ref{subsection: LP}, the solutions to the CEP and to the ED problem for all train scenarios $j\in J_{train}$ are given concurrently. 
 Consider now a test scenario with generation and load time series $ES^{test}_{t,n}, EW^{test}_{t,n},$ $EL^{test}_{t,n}, HL^{test}_{t,n}$ (the test scenario can be in $J_{train}$ or not).
 
 The RH algorithm is as follows:
@@ -613,11 +617,11 @@ The RH algorithm is as follows:
 \end{itemize}
 \end{itemize}
 
-The daily ED problem is formulated in a similar way to the LP problem described in section \ref{section: LP}. 
+The daily ED problem is formulated in a similar way to the LP problem described in section \ref{subsection: LP}. 
 The differences are that the CEP variables ($ns$, $nh$,...) are fixed, and the hydrogen storage level doesn't loop as it did in the year, but it connects to the following day.
 
 \begin{definition}[RH-feasibility]
-  Given a solution $x_{CEP}$ to the CEP solved over train scenarios $j\in J_{train}$ and a test scenario $j$, we consider $x_{CEP}$ to be RH-feasible over scenario $j$ if the RH optimization algorithms terminates at the end of the year and $H_{j,T,n}\ge H_{j,0,n}$ for all nodes $n\in\cN$.
+  Given a solution $\mathbf{x}_{CEP}$ to the CEP solved over train scenarios $j\in J_{train}$ and a test scenario $j$, we consider $\mathbf{x}_{CEP}$ to be RH-feasible over scenario $j$ if the RH optimization algorithms terminates at the end of the year and $H_{j,T,n}\ge H_{j,0,n}$ for all nodes $n\in\cN$.
   \end{definition}
 We require the last condition to mean that the storage levels at the end of the year are at least as high as they were at the start, to flag as unfeasible solutions that manage to satisfy demand throughout the year only through a net consumption of unproduced hydrogen.
   
@@ -626,7 +630,7 @@ This easily renders infeasible scenarios that would be feasible with better stor
 To solve this problem, one can introduce a loss function in the model: for example one can assign a cost to the difference between the hydrogen storage level at time step $t$ and the average over the corresponding variables in the optimal solutions from train scenarios. 
 Thus one defines positive variables $loss_{t,n}$ for each time step $t$ and node $n$, with posiitive cost, and adds the contraint:
 \begin{equation}
-loss_{t,n} \ge \frac{1}{d}\sum_{j\in J_{train}} H_{j,t,n} - H^{test}_{t,n} 
+loss_{t,n}\ \ge\ \frac{1}{d}\left(\sum_{j\in J_{train}}H_{j,t,n}\right) - H^{test}_{t,n} 
 \end{equation}
 Another option would be to assign a slight negative cost to $H^{test}_{t,n}$, to incentivize filling up the storage, but this can inflate the estimated cost of operating electrolyzers more than necessary.
 
@@ -709,9 +713,9 @@ and analogously for $EL_{j,I,n}$ and $HL_{j,i,n}$.
 It is easy to show that the optimal value to the aggregated problem \(CEP_P\) is a lower bound for the original problem \(CEP_{\cT}\). 
 Indeed, given a feasible solution of the latter, we can obtain a solution of the former by fixing the capital infrastructure variables to be the same as in \(CEP_{\cT}\) and letting all time dependent variables for the inner ED problems be defined as follows:
 \begin{equation}\label{sums var_t}
-EtH_{j,I,n} = \sum_{i \in I} EtH_{j,i,e}, \quad\quad HtE_{j,I,e} = \sum_{i \in I} HtE_{j,i,e},  \quad\quad \Delta H_{j,I,e} = \sum_{i \in I} \Delta H_{j,i,e}.
+EtH_{j,I,n} = \sum_{i \in I} EtH_{j,i,e}, \quad\quad HtE_{j,I,e} = \sum_{i \in I} HtE_{j,i,e}.
 \end{equation}
-Similarly, we sum over \(P\_edge^\pm_{j,I,e}\) and \(H\_edge^\pm_{j,I,e}\), separately on the two directions.
+Similarly we sum over \(\Delta H_{j,i,e}\) to obtain \(\Delta H_{j,I,e}\), and we get \(P\_edge^\pm_{j,I,e}\) and \(H\_edge^\pm_{j,I,e}\) by summing over \(P\_edge^\pm_{j,i,e}\) and \(H\_edge^\pm_{j,i,e}\) respectively, separately on the two directions.
 By defining the aggregated variables this way, the aggregated constraints are not violated, thus we get a feasible solution to \(CEP_P\).
 Observe that all variables with non zero cost are defined as greater or equal to zero, so summing over them we define a cost-preserving linear map from the solution space of \(CEP_{\cT}\) to the solution space of \(CEP_P\).
 
@@ -727,9 +731,9 @@ From this observation follows that:
 \end{proposition}
 
 To clarify what time aggregation implies on the model constraints, we express the LP problem in standard matrix form (as expressed in formulation \ref{std_LP}), in order to highlight its inner structure.
-\begin{align*}
-\min_{x \in \bR^{n}}\quad &c^\intercal x \\ 
-\text{s.t.} \quad& Ax = b \stepcounter{equation}\tag{\theequation}\label{std_LP}\\
+\begin{align*}\label{std_LP}
+\min_{x \in \bR^{n}}\quad &\mathbf{c}^\intercal \mathbf{x} \\ 
+\text{s.t.} \quad& A\mathbf{x} = \mathbf{b} \stepcounter{equation}\tag{\theequation}\\
 &x \geq 0
 \end{align*}
 
@@ -740,7 +744,7 @@ Constraints (\ref{constr_H}) and (\ref{constr_nh}) shall be reformulated accordi
 \end{align}
 
 In the problem under consideration, we have various types of constraints: Electricity Balance (\ref{constr_P}), Hydrogen Balance (\ref{constr_H}'), Hydrogen Storage (\ref{constr nh reformulated}), maximum capacity of the time dependent variables (\ref{constr_meth}),(\ref{constr_mhte}),(\ref{constr_NTC}),(\ref{constr_MH}), and bounds on the CEP variables.
-By splitting the variable vector $\mathbf{x}$ into $\mathbf{x}_{CEP}$ and $\mathbf{x}_{ED}$, we can view the constraint matrix $A$ as divided in the following sections:
+By splitting the variable vector $\mathbf{x}$ into $\mathbf{x}^{CEP}$ and $\mathbf{x}^{ED}$, we can view the constraint matrix $A$ as divided in the following sections:
 
 
 \begin{equation}\label{matrix}
@@ -818,17 +822,17 @@ By splitting the variable vector $\mathbf{x}$ into $\mathbf{x}_{CEP}$ and $\math
     
       \draw[thick] (\xtwo,\ya) rectangle (\xthree,\yb); 
 
-      \node at (\xtwo + \blockwidth/2  , \ya - \blockheight/6) {\tiny{0     . . .     0\quad-1}};
-      \node at (\xtwo + \blockwidth*3/2  , \ya - \blockheight*3/6){\tiny{0     . . .     0\quad-1}};
-      \node at (\xtwo + \blockwidth*5/2  , \ya - \blockheight*5/6){\tiny{0     . . .     0\quad-1}};
-      \node at (\xtwo + \blockwidth*9/2  , \ya - \blockheight*9/6) {\tiny{0     . . .     0\quad-1}};
+      \node at (\xtwo + \blockwidth/2  , \ya - \blockheight/6) {\tiny{$0\hdots0\ $-$1$}};
+      \node at (\xtwo + \blockwidth*3/2  , \ya - \blockheight*3/6){\tiny{$0\hdots0\ $-$1$}};
+      \node at (\xtwo + \blockwidth*5/2  , \ya - \blockheight*5/6-0.01){\tiny{$0\hdots0\ $-$1$}};
+      \node at (\xtwo + \blockwidth*9/2  , \ya - \blockheight*9/6) {\tiny{$0\hdots0\ $-$1$}};
       \node at (\xtwo + \blockwidth*7/2  , \ya - \blockheight*9/6) {$\hdots$};
-      \node at (\xtwo + \blockwidth/2  , \ya - \blockheight*3/6) {\tiny{0     . . .     0\quad-1}};
-      \node at (\xtwo + \blockwidth*1/2  , \ya - \blockheight*5/6){\tiny{0     . . .     0\quad-1}};
-      \node at (\xtwo + \blockwidth*3/2  , \ya - \blockheight*5/6){\tiny{0     . . .     0\quad-1}};
-      \node at (\xtwo + \blockwidth/2  , \ya - \blockheight*9/6) {\tiny{0     . . .     0\quad-1}};
-      \node at (\xtwo + \blockwidth*3/2  , \ya - \blockheight*9/6){\tiny{0     . . .     0\quad-1}};
-      \node at (\xtwo + \blockwidth*5/2  , \ya - \blockheight*9/6){\tiny{0     . . .     0\quad-1}};
+      \node at (\xtwo + \blockwidth/2  , \ya - \blockheight*3/6) {\tiny{$0\hdots0\ $-$1$}};
+      \node at (\xtwo + \blockwidth*1/2  , \ya - \blockheight*5/6-0.01){\tiny{$0\hdots0\ $-$1$}};
+      \node at (\xtwo + \blockwidth*3/2  , \ya - \blockheight*5/6-0.01){\tiny{$0\hdots0\ $-$1$}};
+      \node at (\xtwo + \blockwidth/2  , \ya - \blockheight*9/6) {\tiny{$0\hdots0\ $-$1$}};
+      \node at (\xtwo + \blockwidth*3/2  , \ya - \blockheight*9/6){\tiny{$0\hdots0\ $-$1$}};
+      \node at (\xtwo + \blockwidth*5/2  , \ya - \blockheight*9/6){\tiny{$0\hdots0\ $-$1$}};
       
       % FOURTH COLUMN
        \nc{\ytopp}{\ytop + 1.7}
@@ -865,7 +869,7 @@ By splitting the variable vector $\mathbf{x}$ into $\mathbf{x}_{CEP}$ and $\math
   \end{tikzpicture}
   \end{equation}
 
-Variable $nh$ is represented individually and not within $\mathbf{x}_{CEP}$.
+Variable $nh$ is represented individually and not within $\mathbf{x}^{CEP}$.
 The upper rows contain the balance constraints regarding electricity and hydrogen, and bounds for the time dependent variables. 
 The bottom section of the matrix accounts for storage constraints (\ref{constr nh reformulated}): summing over $\Delta H_{j,i,n}$ returns the original variable $H_{j,i,n}$, bound by $nh_n$. 
 All other variable bounds are not represented, since they pertain to one variable at the time and don't really influence the overall reasoning.
@@ -883,7 +887,7 @@ For clarity, we represent now a simplified version of the rows corresponding to 
   \begin{bmatrix}
     \text{ns}  \\
     \text{nw} \\
-    \text{mhte} \\
+    \text{mhte$_n$} \\
     \hline
     \vdots \\
     HtE_{j,t,n} \\
@@ -939,10 +943,11 @@ Power generation and electricity load data tend to follow very strong seasonal a
 Generally, long term patterns are accounted for even with more loose aggregations. 
 On the other hand, a grid described by the solution to the $CEP_{P}$ for a loose partition will likely be unable to deal with daily variability. 
 Indeed, it is quite common to have days with overall greater power production that load, but with peak production at noon and most of the power load during the late evening: such a discrepancy is overlooked by the aggregated model. 
-Choosing a finer partition with well distributed medium-sized time steps \textcolor{red}{(for example weekly or even daily)} would not solve this blind spot. 
+Choosing a finer partition with well distributed medium-sized time steps \textcolor{red}{(for example weekly or daily)} would not solve this blind spot. 
 For this reason, in choosing the refinement strategy for the time partitions we opted to disaggregate one single whole day per iteration into hourly time steps.
 
 The method devised is the following:
+\textcolor{pink}{find a way to reference this}
 \begin{enumerate}\label{time-iter-alg}
 \item Set up the model environment with enough variables for the iterations to come. Impose the constraints relative to an initial time partition, and solve.
 \item Select a day with some given selection method.
@@ -953,98 +958,101 @@ The method devised is the following:
 The first implementation we test considers a random selection method, and a very arbitrary halting condition on the number of iterations. 
 This will be the baseline to compare the other methods we propose.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%         2: VAL         %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 A second implementation makes use of the RH validation function we discussed in subsection \ref{subsection: RH}. 
 The RH will optimize day-by-day with hourly time steps, that is, limited foresight on the finest time resolution. 
-To choose the day to disaggregate, let the RH start on one of the training scenarios with the fixed $x_{CEP}$ values given by the solution to the previous iteration. 
+To choose the day to disaggregate, let the RH start on one of the training scenarios with the fixed $\mathbf{x}_{CEP}$ values given by the solution to the previous iteration. 
 If the RH iteration breaks before reaching the end of the year, choose the day it fails on as the day to disaggregate. 
-Conversely, if the RH makes it through the year, then the considered $x_{CEP}$ values are part of a feasible solution for the CEP+ED problem on the whole horizon, on the finest time resolution, thus we have solved the original problem we were aiming for.
+Conversely, if the RH makes it through the year, then the considered $\mathbf{x}_{CEP}$ values are part of a feasible solution for the CEP+ED problem on the whole horizon, on the finest time resolution, thus we have solved the original problem we were aiming for.
 
 One advantage of using the RH validation function within the iterative aggregation method is that it automatically provides an effective halting method that guarantees feasibility for the original problem.
 
-Furthermore, the final $x_{CEP}$ come from the optimal solution of a relaxation. 
+Furthermore, the final $\mathbf{x}_{CEP}$ come from the optimal solution of a relaxation. 
 This is not enough to guarantee optimality for the finer resolution CEP, since marginal costs of conversion to and back from hydrogen, and of its transportation, aren't accounted for fully. 
-\textcolor{red}{specify at the start of section LP that we use CEP, ED and LP to refer to one, two and both when talking about solutions. A solution to CEP is considered optimal if it is part of an optimal LP solution on given scenarios. We are always talking relative to given scenarios.}
 However, \textcolor{pink}{distance from the actual optimal solution can be bound (estimate) by -- marginal costs in those days times the year, since they are chosen to be the worst days}.
 
-A great disadvantage of using the RH validation within the iteration loop is that the computational costs it brings along is not insignificant, needing careful consideration on whether it is in effect preferable to directly optimizing on the full problem.
+Unfortunately, a great disadvantage of using the RH validation within the iteration loop is that the computational costs it brings along is not insignificant, needing careful consideration on whether it is in effect preferable to directly optimizing on the full problem.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%         3: RHO         $$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$$
+\subsection{Rho  \textcolor{pink}{$\rightarrow$ make it a subsection by itself? or keep with the above?}}
 
+We now discuss a third and final method we propose and test for the selection of the day to disaggregate in step 2 of algorithm \ref{time-iter-alg}. 
+The goal is to design a heuristic to measure ``how distant the solution to the aggregated LP is from being extended to a solution that is feasible to the disaggregated LP''.
 
-{
-\color{gray}
-\textbf{While obtaining a feasible solution to \eqref{eq:LP} from \eqref{eq:LPaggr} is not always guaranteed, it is possible under certain assumptions.}
-Here, if \(B\) is a matrix having \(I,J\) as set of indexes for the rows and columns respctively, then, for all \(I' \subset I\) and \(J' \subset J\), we denote with \(B_{I',J'}\) the submatrix of \(B\) havins rows in \(I'\) and columns in \(J'\).
-\begin{observation}
-\label{ob:aggrconstr}
-If \((\rowP, \colP)\) is a structure-preserving aggregation, let \(R \in \rowP\) and \(r \in R\). Let \(\tilde{x}\) be a solution to the aggregated problem \eqref{eq:LPaggr}. If \(\tilde{b}_r - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}} \neq 0\), define \(\rho_r \coloneqq \frac{b_r - A_{r, \colP_{=1}} \tilde{x}_{\colP_{=1}}}{\tilde{b}_r
- - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}}}\). If \(A_{r, \colP_{=1}} = 0\) and \(b_r = 0\), then \(\rho_r\) can be chosen arbitrarily. 
-If \(\rho_r \geq 0\) and \(x \in \bR^n\) satisfies \(x_{\colP_{=1}} = \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} = \rho_r \tilde{x}_C\) for all \(C \in \supp(\tilde{A}_R)_{>1}\), then \(x\) satisfies the constraint \(A_r x = b_r\) of the original problem.
-\end{observation}
+Consider a time partition $P$ of the time horizon $\cT$ and let \(I \in P\) and \(t \in I\).
+Let the un-aggregated LP$_{\cT}$ problem be represented by constraint matrix $A$ and vector $\mathbf{b}$, and analogously let $\tilde{A}$ and $\tilde{b}$ represent the aggregated LP$_P$.
+Let  be a solution to LP$_P$.
 
-\begin{proof}
-From the hypothesis and the definition of structure-preserving aggregation, we have:
-\begin{align*}
-A_r x &= \sum_{i \in \supp(A_r)} A_{r,i} x_i \\
-&= \sum_{S \in \supp(\tilde{A}_R)_{>1}} A_{r,f^r(S)} x_{f^r(S)} + 
-\sum_{j \in \colP_{=1}} A_{r,j} x_j \\
-&= \sum_{S \in \supp(\tilde{A}_R)_{>1}} \tilde{A}_{R,S} \rho_r \tilde{x}_S + 
-\sum_{j \in \colP_{=1}} A_{r,j} x_j
-\end{align*}
+Obviously extending \(\tilde{\mathbf{x}}\) in order to immerse it in the original LP{$_\cT$} solution space requires to set the value to all variables relative to time steps in the interior of the aggregated steps, in a way that satisfies all respective constraints, and this is not always possible.
+But we can attempt to do so under very specific assumptions. %It is the violations of these assumptions that
 
-By the definition of \(\rho_r\):
-\begin{align*}
-\rho_r \sum_{S \in \supp(\tilde{A}_R)_{>1}} \tilde{A}_{R,S} \tilde{x}_S 
-&= \rho_r (\tilde{A}_R \tilde{x} - \tilde{A}_{R,\colP_{=1}} \tilde{x}_{\colP_{=1}}) \\
-&= \rho_r (\tilde{b}_R - \tilde{A}_{R,\colP_{=1}} \tilde{x}_{\colP_{=1}}) \\
-&= b_r - A_{r, \colP_{=1}} \tilde{x}_{\colP_{=1}}
-\end{align*}
+\begin{definition}[Rho]\label{def rho}
+Let $r$ be a single row in matrix $A$, associated to a constraint regarding time step $t$ within the upper part of matrix \ref{matrix}. 
+Let $R$ be the row corresponding to the respective aggregated constraint in matrix $\tilde{A}$.
 
-Thus, we obtain:
-\[
-A_r x = b_r
-\]
-\qed
-\end{proof}
-
-A structure-preserving aggregation does not inherently guarantee feasibility for all constraints in the original problem. However, Observation \ref{ob:aggrconstr} illustrates how to partially reconstruct a solution \(x\) for a specific constraint \(r\) by appropriately scaling the aggregated variables within the support of \(A_r\). 
-
-We can now define the hypergraph associated to the aggregation \((\rowP, \colP)\).
-\begin{definition}
-  The \emph{hypergraph associated to the aggregation \((\rowP, \colP)\)} is the hypergraph \(\cN, \cE\) having as nodes the aggregated variables \(\cN \coloneqq \colP_{>1}\) and as edges the subsest of \(\cN\) that appear together in not row-agnostic constraints.
+If \(\tilde{b}_R - \tilde{A}_R^{CEP}\cdot \tilde{\mathbf{x}}^{CEP} \neq 0\), define:
+\[\rho_r \coloneqq \frac{b_r - A_r^{CEP} \cdot \tilde{\mathbf{x}}^{CEP}}{\tilde{b}_R - \tilde{A}_R^{CEP}\cdot \tilde{\mathbf{x}}^{CEP}}\  .\]
+If \(\tilde{b}_R - \tilde{A}_R^{CEP}\cdot \tilde{\mathbf{x}}^{CEP}  = 0\),  \textcolor{red}{then \(\rho_r\) can be chosen arbitrarily. }
 \end{definition}
+In essence, \(\rho_r\) represents, for each time step \(t \in I \in \cT\), the ratio between the net energy production at time \(t\) and the net energy production over the interval \(T\).
 
-When two edges (constraints) in the hypergraph, \(r\) and \(r'\), share aggregated variables, the scaling factors \(\rho_r\) and \(\rho_{r'}\) must be equal to maintain consistency. 
-Then if \(\rho_r\) can be defined consistently, by applying observation \ref{ob:aggrconstr}, to all \(r \in R \in \rowP_{>1}\) we can construct a feasible solution for the unaggregated problem \eqref{eq:LPunaggr}. Thus we have: 
-\begin{proposition}
-\label{prop:xaggfeasible}
-If \((\rowP, \colP)\) is a structure-preserving aggregation. Let \(\tilde{x}\) be a solution 
-to the aggregated problem \eqref{eq:LPaggr}. If for all \(r \in R \in \rowP_{>1}\) such that  \(\tilde{b}_r - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}} = 0\) we have \(A_{r,\colP_{=1}} = 0\) and \(b_r=0\).
-Define \(\rho_r \coloneqq \frac{b_r - A_{r, \colP_{=1}} \tilde{x}_{\colP_{=1}}}{\tilde{b}_R - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}}}\) for all \(r \in R \in \rowP_{>1}\) such that   \(\tilde{b}_r - \tilde{A}_{R, \colP_{=1}} \tilde{x}_{\colP_{=1}} \neq 0\). If \(\rho_r \geq 0\) and is constant over the connected components of the hypergraph associated to \((\rowP, \colP)\). 
-Then \(x_{\colP_{=1}} \coloneqq \tilde{x}_{\colP_{=1}}\) and \(x_{f^r(C)} \coloneqq \rho_r \tilde{x}_C\) for all \(C \in \supp(\tilde{A}_R)\) and \(C \in \colP_{>1}\) is well defined and is feasible solution for the unaggregated problem \eqref{eq:LP}.
+Observe that summing $\rho_r$ over all indexes $r$ corrisponding to the same aggregated time step constraint $R$ is one, since aggregated constraints are defined through summations (\ref{sums scenarios}).
+
+%\begin{definition}[Hypergraph of $A$]
+%Given the constraint matrix $A$ , we define its hypergraph as the graph with nodes $r\in \mathcal{R}$ corresponding to all rows, that is, to all constraints, and edges connecting any two nodes such that at least one variable $x^{ED}$ appears in both constraints. 
+%\end{definition}
+
+\begin{proposition}\label{prop rho}
+  With the notation introduced above, assume the following:
+  \begin{itemize}
+  \item[$\bullet$]  $\tilde{b}_R-\tilde{A}_R^{CEP}\cdot\tilde{\mathbf{x}}^{CEP}\neq0$ for all rows $R$ of $\tilde{A}$;
+  \item[$\bullet$] $\rho_r$ is constant over %all connected components of the hypergraph of $A$. 
+  all rows $r$ representing constraints for the same time step $t$. Denote this as $\rho_t$.
+  \item[$\bullet$] for every aggregated step $I\in P$,  $\rho_t$ keeps the same sign for all $t\in I$. 
+  \end{itemize}
+  Define $\mathbf{x}$ in the solution space of LP$_{\cT}$ by setting 
+  \[ \mathbf{x}^{CEP} = \tilde{\mathbf{x}}^{CEP}\text{,\quad and\quad} x^{ED}_t = \rho_t\cdot \tilde{x}^{ED}_I \quad \forall t\in I, I\in P.\]
+  Then $\mathbf{x}$ is a feasible solution for LP$_{\cT}$.
 \end{proposition}
 
+\begin{proof}
+  The third condition ensures all variables $\mathbf{x}^{ED}$ are positive at all times.
 
-While row aggregation of a linear problem is a relaxation of the original problem, the same does not apply to column aggregation. However, the column aggregation used for the  Capacity Expansion Problem in this work is still a relaxation. In general a column aggregation of a linear problem is a relaxation of the original problem whenever it is a \emph{constant-coefficients column aggregation}, that is:
+  Let $Q$ indicate the ``block'' submatrix from matrix \ref{matrix}. 
+  For all rows $r$ in the upper part of matrix \ref{matrix}, let $Q_r$ denote the row of $Q$ involved in row $A_r$; \textcolor{pink}{recall} that $Q_r=Q_R$. Then the following holds:
+\begin{align*}
+A_r \cdot \mathbf{x} &=A^{CEP}_r\cdot \mathbf{x}^{CEP} +  Q_r\cdot \mathbf{x}^{ED}_t = \\
+&=A^{CEP}_r\cdot \mathbf{x}^{CEP} +  Q_R\cdot \rho_t\cdot\tilde{\mathbf{x}}^{ED}_t = \\
+&=A^{CEP}_r\cdot \mathbf{x}^{CEP} + \frac{b_r - A_r^{CEP} \cdot \tilde{\mathbf{x}}^{CEP}}{\tilde{b}_R - \tilde{A}_R^{CEP}\cdot \tilde{\mathbf{x}}^{CEP}} \cdot Q_R \cdot \tilde{\mathbf{x}}^{ED}_t =\\
+&=A^{CEP}_r\cdot \mathbf{x}^{CEP} + b_r - A^{CEP}_r\cdot \tilde{\mathbf{x}}^{CEP} = b_r
+\end{align*}
+
+For the lower part of matrix \ref{matrix}, the constraint reduces to:
+\begin{align*}
+\sum_{t\in \cT} \Delta H_{j,t,n} &= \sum_{I\in P} \left( \sum_{t\in I} \Delta H_{j,t,n} \right) = \sum_{I\in P} \left( \sum_{t\in I} \rho_t\cdot\Delta H_{j,I,n} \right) = \\
+& = \sum_{I\in P} \left( \sum_{t\in I} \rho_t \right)\cdot\Delta H_{j,I,n} =  \sum_{I\in P}\Delta H_{j,I,n} \le \ nh_n
+\end{align*}
+\qed\end{proof}
+
+Thus, under these assumptions, we are able to construct a feasible solution for LP$_{\cT}$ starting from $\tilde{\mathbf{x}}$, building $\mathbf{x}$ by appropriately scaling the variables  $\tilde{\mathbf{x}}$ within each aggregated time step, by a factor $rho_t$.
+
+The condition on $\rho_r$ is obviously rarely satisfied, since it would require for the power generation and load time series to be perfectly aligned (or perfectly opposed) with hydrogen load series, and across all nodes in the grid.
+However, we are interested in exactly those cases where generation and load are most misalligned, with the expectation that those are the cases that cause $CEP_P$ solutions to be infeasible for LP$_{\cT}$.
+Such cases correspond to those intervals $I\in P$ where $\rho_r$ has greatest variance over the rows constraining the same time moment $t\in I$.
+
+In conclusion, within the iterative procedure for refining the solution of the aggregated problem \ref{time-iter-alg}, we can select the time interval to be refined based on the extent to which it violates the conditions of proposition \ref{prop rho}.
+ Specifically, we split intervals where the net production changes sign, and those intervals \(T\) in which, for a fixed time step \(t \in T\), the ratio between the net energy production at time \(t\) and the net energy production \textcolor{red}{over the interval \(T\)} exhibits the largest variance.
+
+This same approach, generalized to a wider family of aggregations LP problems, is detailed in appendix \ref{appendix B}.
 
 
-It can be easily checked that:
 
-\begin{observation}
-  The aggregation of the Capacity Expansion Problem (CEP) is a structure-preserving aggregation with constant coefficients. Furthermore, the constraints \eqref{eq:delta_hydrogen_constraints} are \(\rho\)-agnostic.
-\end{observation}
 
-Since the only constraints linking variables across different time steps are those in \eqref{eq:delta_hydrogen_constraints}, the connected components of the hypergraph representing the aggregation correspond to the hypergraphs of the Energy Dispatch (ED) at each time step. Specifically, there is one connected component per time step, with nodes representing the variables at that step. To construct a feasible solution from the aggregated problem, it is sufficient for \(\rho_r\) to be constant across constraints within the same time step.
 
-Using the definition of \(\rho_r\), it can be shown that for each time step \(t \in T \in \cT\), this corresponds to the ratio between the net energy production at time \(t\) and the net energy production over the interval \(T\). Hence, the conditions of Proposition \ref{prop:xaggfeasible} are met if, for a fixed time step \(t\), this ratio is the same for all nodes in the network, and if, during the interval \(T\), the net production at each node is consistently positive or consistently negative. Thus, we state:
 
-\begin{observation}
-  \label{obs:cep_agg_feasible}
-  If for each time step \(t \in T \in \cT\), the ratio of the net energy production at time \(t\) to the net energy production over the interval \(T\) is the same for all nodes in the network, and if, throughout the interval \(T\), the net production at each node is either always positive or always negative, then the aggregated problem is exact.
-\end{observation}
 
-Although this is not generally the case, it suggests an iterative procedure for refining the solution of the aggregated problem. At each iteration, we refine the time partition of the aggregated problem, selecting the time interval to be refined based on the extent to which it violates the conditions of Observation \ref{obs:cep_agg_feasible}. Specifically, we split intervals where the net production changes sign, and those intervals \(T\) in which, for a fixed time step \(t \in T\), the ratio between the net energy production at time \(t\) and the net energy production over the interval \(T\) exhibits the largest variance.
 
-}
 
 
 
